Updated Minecraft backup script.